# sjs_unzip_lite

./: .gitignore  LICENSE  README.md  design.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: RELEASE_NOTES_v0.1.0-pre.md  THIRD_PARTY_NOTICES.md  design.md  test_cases.md  test_plan.md
src/: main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs  password_config.rs
src-tauri/src/error/: app_error.rs
src-tauri/src/events/: log_event.rs  mod.rs  progress_event.rs
src-tauri/src/task/: cancel.rs  cleaner.rs  context.rs  extractor.rs  log_file.rs  mod.rs  mover.rs  password.rs  renamer.rs  runner.rs  safety.rs  scanner.rs
src-tauri/src/utils/: filename.rs
src/components/: AppShell.vue  FolderPicker.vue  LogPanel.vue  PasswordManager.vue  ResultDialog.vue  TaskProgress.vue  WarningDialog.vue
src/composables/: useLogEvents.ts  usePasswordStore.ts  useTaskRunner.ts  useTheme.ts
src/styles/: animations.css  index.css  theme.css
src/types/: log.ts  password.ts  task.ts
src/utils/: filename.ts  validation.ts
