[package]
name = "sjs-unzip-tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "sjs_unzip_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "fs", "rt-multi-thread"] }
walkdir = "2"
regex = "1"
chrono = "0.4"
trash = "5"
dirs = "6"

[dev-dependencies]
tempfile = "3"
